--- a/client/src/app/modules/invoicing/components/payment-details-dialog/payment-details-dialog.component.html
+++ b/client/src/app/modules/invoicing/components/payment-details-dialog/payment-details-dialog.component.html
@@ -20,7 +20,7 @@
     </mat-tree>
   </div>
   <div class="right">
-    <mat-tab-group animationDuration="0ms" #tabs *ngIf="selectedPayment">
+    <mat-tab-group animationDuration="0ms" *ngIf="selectedPayment">
       <mat-tab label="Details">
         <div class="form-div">
           <table class="full-width">
