--- a/client/src/app/modules/monitoring/components/monitoring/monitoring.component.html
+++ b/client/src/app/modules/monitoring/components/monitoring/monitoring.component.html
@@ -1,7 +1,7 @@
 <div>
   <monitoring-summary *ngIf="!canDisplayExtendentMonitoring()"></monitoring-summary>
-  <mat-tab-group animationDuration="0ms" #tabs *ngIf="canDisplayExtendentMonitoring()"
-    [(selectedIndex)]="selectedTabIndex">
+  <mat-tab-group animationDuration="0ms" (selectedTabChange)="onTabChange($event)"
+    *ngIf="canDisplayExtendentMonitoring()" [(selectedIndex)]="selectedTabIndex">
     <mat-tab label="Synthèse">
       <monitoring-summary (selectBatchSetting)="selectBatchSetting($event)"></monitoring-summary>
     </mat-tab>
