--- a/client/src/app/modules/quotation/components/add-affaire-dialog/add-affaire-dialog.component.html
+++ b/client/src/app/modules/quotation/components/add-affaire-dialog/add-affaire-dialog.component.html
@@ -1,4 +1,4 @@
-<mat-tab-group animationDuration="0ms" #tabs [selectedIndex]="0">
+<mat-tab-group animationDuration="0ms">
   <mat-tab label="Choisir une affaire existante">
     <table class="full-width">
       <tr>
