--- a/client/src/app/modules/administration/components/provider/provider.component.html
+++ b/client/src/app/modules/administration/components/provider/provider.component.html
@@ -11,7 +11,7 @@
   </div>
 </div>
 <div *ngIf="selectedProvider " class="mat-elevation-z2 form-div min-height">
-  <mat-tab-group animationDuration="0ms">
+  <mat-tab-group animationDuration="0ms" (selectedTabChange)="onTabChange($event)" [selectedIndex]="index">
     <mat-tab label="Fiche du fournisseur">
       <form [formGroup]="entityForm2">
         <div class="full-width">
