--- a/client/src/app/modules/tiers/components/tiers-list/tiers-list.component.html
+++ b/client/src/app/modules/tiers/components/tiers-list/tiers-list.component.html
@@ -1,5 +1,5 @@
 <div>
-  <mat-tab-group animationDuration="0ms">
+  <mat-tab-group animationDuration="0ms" (selectedTabChange)="onTabChange($event)" [selectedIndex]="index">
     <mat-tab label="Tiers">
       <div class="mat-elevation-z2 form-div">
         <div class=" full-width">
